# wxNUCOS

./: .gitignore  BuildDiskImage  InstallerScript.iss  NUCOS.mac.spec  NUCOS.py  README.rst  TermsAndConditions.rtf  conda_requirements.txt  my_copy_tree.py  pyproject.toml  setup.py  setup_py2exe.py
Icons/: ConverterIcon.icns  NUCOS.icns  build_icons.sh  build_icons.sh~
Icons/.svn/: entries
py2app/: NUCOS  setup.py
scripts/: NUCOS  nucos.py
src/wxnucos/: about_dialog.py  bringing_up_help_dialog.py  gui.py  icons.py  wxnucos.py
src/wxnucos/help/: Help.html  main.css
wxnucos/: __init__.py  about_dialog.py  bringing_up_help_dialog.py  gui.py  oil_quantity.py  utilities.py  wxnucos.py
